--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "test:verbose:watch": "jest --verbose --watch",
     "test:coverage:watchAll": "jest --coverage --watchAll",
     "test:verbose:watchAll": "jest --verbose --watchAll",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "jest:change": "node changeFile.js"
+
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-changed-files": "^29.7.0"
   },
   "dependencies": {
     "axios": "^1.7.3"
